# Nadir

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/data/: sen12mscr.yaml
configs/experiment/: dsen2cr_dummy.yaml  dsen2cr_spring6.yaml
configs/model/: dsen2cr.yaml
configs/train/: default.yaml
docs/: design_decisions.md  emrdm_reevaluation.md  nomodel_per_season.json  protocol.md  spring6_per_season.json
scripts/: download_data.py  eval_per_season.py  investigate_sam.py  make_dummy_data.py  probe_eovae.py
scripts/reeval/: analyze_h1.py  compare_arm_a.py  compare_raw.py  emrdm_infer_scene.py  emrdm_raw_metrics.py  gate0_determinism.py  internal_consistency.py  make_arm_a_config.py  nadir_eval_preds.py  nadir_raw_metrics.py  recover_summer_s2.sh  run_9scene_infer.sh  run_b1_h1.sh  verify_extraction.py  verify_summer73.py
src/nadir/: __init__.py  eval.py  tracking.py  train.py  utils.py  visualize.py
src/nadir/data/: __init__.py  cloud_mask.py  dummy.py  preprocess.py  sen12mscr.py  splits.py  transforms.py
src/nadir/losses/: __init__.py  carl.py
src/nadir/metrics/: __init__.py  suite.py
src/nadir/models/: __init__.py  dsen2cr.py
tests/: test_carl.py  test_dataset.py  test_download.py  test_dummy_data.py  test_metrics.py  test_model.py  test_preprocess.py  test_splits.py  test_train_smoke.py  test_utils.py
